--- a/minikube/grafana-k8.yml
+++ b/minikube/grafana-k8.yml
@@ -36,6 +36,27 @@ data:
         postgresVersion: 903
       editable: true
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: grafana-dashboards-conf
+  namespace: todo-application
+  labels:
+    name: grafana-dashboards-conf
+data:
+  dashboards.yml: |-
+    apiVersion: 1
+
+    providers:
+    - name: 'default'
+      orgId: 1
+      folder: ''
+      type: file
+      disableDeletion: false
+      updateIntervalSeconds: 10 #how often Grafana will scan for changed dashboards
+      options:
+        path: /usr/share/grafana/custom/dashboards
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -80,9 +101,9 @@ spec:
       restartPolicy: Always
       volumes:
         - name: grafana-dashboards-volume
-          hostPath:   # hardcoded path
-            path: /home/hscc/Documents/config/todolist-config/minikube/grafana/provisioning/dashboards
-            type: Directory
+          configMap:
+            defaultMode: 420
+            name: grafana-dashboards-conf
         - name: grafana-datasources-volume
           configMap:
             defaultMode: 420
