--- a/minikube/grafana-k8.yml
+++ b/minikube/grafana-k8.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-datasources-conf
-  namespace: todo-application
+  namespace: todo-application-f1
   labels:
     name: grafana-datasources-conf
 data:
@@ -40,7 +40,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: grafana-deployment
-  namespace: todo-application
+  namespace: todo-application-f1
   labels:
     app: grafana
 spec:
@@ -97,7 +97,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: grafana-service
-  namespace: todo-application
+  namespace: todo-application-f1
   labels:
     app: grafana
 spec:
