--- a/minikube/inspectit-k8.yml
+++ b/minikube/inspectit-k8.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: todo-agent-claim
-  namespace: todo-application
+  namespace: todo-application-f1
 spec:
   storageClassName: standard       # minikube: standard | azure: default
   accessModes:
@@ -15,7 +15,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: todo-inspectit
-  namespace: todo-application
+  namespace: todo-application-f1
   labels:
     app: todo-inspectit
 spec:
