--- a/minikube/postgres-exporter-conf-k8.yml
+++ b/minikube/postgres-exporter-conf-k8.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: postgres-exporter-conf
-  namespace: todo-application
+  namespace: todo-application-f1
   labels:
     name: postgres-exporter-conf
 data:
