--- a/minikube/todo-k8.yml
+++ b/minikube/todo-k8.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: todo-app
-  namespace: todo-application
+  namespace: todo-application-f1
   labels:
     service: todo
 spec:
@@ -68,7 +68,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: todo-db
-  namespace: todo-application
+  namespace: todo-application-f1
   labels:
     service: todo
 spec:
@@ -138,7 +138,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: todo-service
-  namespace: todo-application
+  namespace: todo-application-f1
 spec:
   type: LoadBalancer
   selector:
